# chromini

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ColourCmprs.hpp  ColourSpaces.hpp  DKohonen.hpp  imageIO.hpp
